Added GlobalExceptionHandler, some security config changed, services updated

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=personal-expense-tracker-server
 spring.datasource.url=jdbc:postgresql://localhost:5432/personal-expense
 spring.datasource.username=postgres
 spring.datasource.password=ap199717
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
